# DocCrawler-Toolkit

./: .gitignore  CRAWLER_SPEC.md  README.md  pyproject.toml  requirements.txt
configs/: crawler.yaml
scripts/: crawl.py  parse.py  utils.py
src/visio_handbook/: cli.py  crawl.py  crawler.py  parse.py  parser.py  renderer.py  soup_utils.py  utils.py
templates/: CRAWLER_SPEC.md  Example.docx  Sample-VisioQuickStart.md  handbook_template.docx.docx  handbook_template.md  visio_handbook_template.md  ~$xample.docx
tests/: test_crawl.py  test_imports.py
